--- a/fondend/phungps24202/article.html
+++ b/fondend/phungps24202/article.html
@@ -55,9 +55,9 @@
 		</section>
 		<aside class="sidebar">
 			<div class="search-box">
-				<h2>Search</h2>
+				<h2>Tìm kiếm</h2>
 				<form>
-					<label for="search">Search for Books</label>
+					<label for="search">Tìm kiếm tin tức</label>
 					<input type="text" id="search" name="search">
 					<button type="submit">Go</button>
 				</form>
