review code phungps24202

--- a/fondend/phungps24202/detail.html
+++ b/fondend/phungps24202/detail.html
@@ -90,145 +90,109 @@
             </div>
         </div>
         <div class="user">
-          <div class="user-title">
-            <h3>BÌNH LUẬN</h3>
-          </div>   
-          <div class="user-form">
-            <form action="">
-              <div class="form-group">
-                <textarea name="" id="" placeholder="Nhập nội dung bình luận (tiếng Việt có dấu)..."></textarea>
-                <button type="submit" class="user-button">GỬI BÌNH LUẬN</button>
-              </div>
-            </form>
-          </div>  
-          <div class="user-wrapper">
-            <div class="user-avatar">
-              <img src="/fondend/phungps24202/assets/image/avatar-facebook-doc.jpg" alt="User Avatar">
+            <div class="user-title">
+                <h3>BÌNH LUẬN</h3>
             </div>
-            <div class="comment-body">
-              <h4 class="comment-user">John Doe</h4>
-              <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <span class="comment-time">2 hours ago</span>
+            <div class="user-form">
+                <form action="">
+                    <div class="form-group">
+                        <textarea name="" id="" placeholder="Nhập nội dung bình luận (tiếng Việt có dấu)..."></textarea>
+                        <button type="submit" class="user-button">GỬI BÌNH LUẬN</button>
+                    </div>
+                </form>
             </div>
-          </div> 
-          <div class="user-wrapper">
-            <div class="user-avatar">
-              <img src="/fondend/phungps24202/assets/image/avatar-facebook-doc.jpg" alt="User Avatar">
-            </div>
-            <div class="comment-body">
-              <h4 class="comment-user">John Doe</h4>
-              <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <span class="comment-time">2 hours ago</span>
-            </div>
-          </div>
-          <div class="related-title">
-            <h2>Sách Cùng Lĩnh Vực</h2>
-          </div>
-          <div class="related-book">
-            <div class="product">
-              <div class="product-img">
-                <img
-                  class="image"
-                  src="https://th.bing.com/th/id/OIP.qWOnNYv8xJF0P_JApoPZjAHaHE?w=174&h=184&c=7&r=0&o=5&pid=1.7"
-                  width="100%"
-                  alt=""
-                />
-              </div>
-              <div class="product-title">
-                <a class="product-name"
-                  >Lời thú tội mới của một sát thủ kinh tế</a
-                >
-                <a class="product-author"> John Perkins</a>
-                <div class="product-price">
-                  <p class="product-price__reduced">100.000 đ</p>
-                  <del class="product-price__original">150.000 đ</del>
+            <div class="user-wrapper">
+                <div class="user-avatar">
+                    <img src="/fondend/phungps24202/assets/image/avatar-facebook-doc.jpg" alt="User Avatar" />
                 </div>
-              </div>          
-            </div>
-            <div class="product">
-              <div class="product-img">
-                <img
-                  class="image"
-                  src="https://th.bing.com/th/id/OIP.qWOnNYv8xJF0P_JApoPZjAHaHE?w=174&h=184&c=7&r=0&o=5&pid=1.7"
-                  width="100%"
-                  alt=""
-                />
-              </div>
-              <div class="product-title">
-                <a class="product-name"
-                  >Lời thú tội mới của một sát thủ kinh tế</a
-                >
-                <a class="product-author"> John Perkins</a>
-                <div class="product-price">
-                  <p class="product-price__reduced">100.000 đ</p>
-                  <del class="product-price__original">150.000 đ</del>
+                <div class="comment-body">
+                    <h4 class="comment-user">John Doe</h4>
+                    <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <span class="comment-time">2 hours ago</span>
                 </div>
-              </div>          
             </div>
-            <div class="product">
-              <div class="product-img">
-                <img
-                  class="image"
-                  src="https://th.bing.com/th/id/OIP.qWOnNYv8xJF0P_JApoPZjAHaHE?w=174&h=184&c=7&r=0&o=5&pid=1.7"
-                  width="100%"
-                  alt=""
-                />
-              </div>
-              <div class="product-title">
-                <a class="product-name"
-                  >Lời thú tội mới của một sát thủ kinh tế</a
-                >
-                <a class="product-author"> John Perkins</a>
-                <div class="product-price">
-                  <p class="product-price__reduced">100.000 đ</p>
-                  <del class="product-price__original">150.000 đ</del>
+            <div class="user-wrapper">
+                <div class="user-avatar">
+                    <img src="/fondend/phungps24202/assets/image/avatar-facebook-doc.jpg" alt="User Avatar" />
                 </div>
-              </div>          
-            </div>
-            <div class="product">
-              <div class="product-img">
-                <img
-                  class="image"
-                  src="https://th.bing.com/th/id/OIP.qWOnNYv8xJF0P_JApoPZjAHaHE?w=174&h=184&c=7&r=0&o=5&pid=1.7"
-                  width="100%"
-                  alt=""
-                />
-              </div>
-              <div class="product-title">
-                <a class="product-name"
-                  >Lời thú tội mới của một sát thủ kinh tế</a
-                >
-                <a class="product-author"> John Perkins</a>
-                <div class="product-price">
-                  <p class="product-price__reduced">100.000 đ</p>
-                  <del class="product-price__original">150.000 đ</del>
+                <div class="comment-body">
+                    <h4 class="comment-user">John Doe</h4>
+                    <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <span class="comment-time">2 hours ago</span>
                 </div>
-              </div>          
             </div>
-             <div class="product">
-              <div class="product-img">
-                <img
-                  class="image"
-                  src="https://th.bing.com/th/id/OIP.qWOnNYv8xJF0P_JApoPZjAHaHE?w=174&h=184&c=7&r=0&o=5&pid=1.7"
-                  width="100%"
-                  alt=""
-                />
-              </div>
-              <div class="product-title">
-                <a class="product-name"
-                  >Lời thú tội mới của một sát thủ kinh tế</a
-                >
-                <a class="product-author"> John Perkins</a>
-                <div class="product-price">
-                  <p class="product-price__reduced">100.000 đ</p>
-                  <del class="product-price__original">150.000 đ</del>
+            <div class="related-title">
+                <h2>Sách Cùng Lĩnh Vực</h2>
+            </div>
+            <div class="related-book">
+                <div class="product">
+                    <div class="product-img">
+                        <img class="image" src="https://th.bing.com/th/id/OIP.qWOnNYv8xJF0P_JApoPZjAHaHE?w=174&h=184&c=7&r=0&o=5&pid=1.7" width="100%" alt="" />
+                    </div>
+                    <div class="product-title">
+                        <a class="product-name">Lời thú tội mới của một sát thủ kinh tế</a>
+                        <a class="product-author"> John Perkins</a>
+                        <div class="product-price">
+                            <p class="product-price__reduced">100.000 đ</p>
+                            <del class="product-price__original">150.000 đ</del>
+                        </div>
+                    </div>
                 </div>
-              </div>          
+                <div class="product">
+                    <div class="product-img">
+                        <img class="image" src="https://th.bing.com/th/id/OIP.qWOnNYv8xJF0P_JApoPZjAHaHE?w=174&h=184&c=7&r=0&o=5&pid=1.7" width="100%" alt="" />
+                    </div>
+                    <div class="product-title">
+                        <a class="product-name">Lời thú tội mới của một sát thủ kinh tế</a>
+                        <a class="product-author"> John Perkins</a>
+                        <div class="product-price">
+                            <p class="product-price__reduced">100.000 đ</p>
+                            <del class="product-price__original">150.000 đ</del>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img class="image" src="https://th.bing.com/th/id/OIP.qWOnNYv8xJF0P_JApoPZjAHaHE?w=174&h=184&c=7&r=0&o=5&pid=1.7" width="100%" alt="" />
+                    </div>
+                    <div class="product-title">
+                        <a class="product-name">Lời thú tội mới của một sát thủ kinh tế</a>
+                        <a class="product-author"> John Perkins</a>
+                        <div class="product-price">
+                            <p class="product-price__reduced">100.000 đ</p>
+                            <del class="product-price__original">150.000 đ</del>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img class="image" src="https://th.bing.com/th/id/OIP.qWOnNYv8xJF0P_JApoPZjAHaHE?w=174&h=184&c=7&r=0&o=5&pid=1.7" width="100%" alt="" />
+                    </div>
+                    <div class="product-title">
+                        <a class="product-name">Lời thú tội mới của một sát thủ kinh tế</a>
+                        <a class="product-author"> John Perkins</a>
+                        <div class="product-price">
+                            <p class="product-price__reduced">100.000 đ</p>
+                            <del class="product-price__original">150.000 đ</del>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img class="image" src="https://th.bing.com/th/id/OIP.qWOnNYv8xJF0P_JApoPZjAHaHE?w=174&h=184&c=7&r=0&o=5&pid=1.7" width="100%" alt="" />
+                    </div>
+                    <div class="product-title">
+                        <a class="product-name">Lời thú tội mới của một sát thủ kinh tế</a>
+                        <a class="product-author"> John Perkins</a>
+                        <div class="product-price">
+                            <p class="product-price__reduced">100.000 đ</p>
+                            <del class="product-price__original">150.000 đ</del>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-        
-          
+
         <aside>789</aside>
         <footer>111</footer>
     </body>
