--- a/fondend/cart/thanhtoan.html
+++ b/fondend/cart/thanhtoan.html
@@ -11,6 +11,7 @@
     <style>
         th, td {
     border-bottom: 1px solid #ddd;
+
 }
         select{
     display: block;
@@ -60,7 +61,7 @@
 <body>
     <div class="cart" style="position: relative;">
         
-        <div class="cart_top">
+        <!-- <div class="cart_top">
             <progress max="100" value="45"></progress>
             <div class="item_trangthai">
                 <p class="text_trangthai">Giỏ hàng</p>
@@ -80,7 +81,7 @@
                     <i class="fa-solid fa-truck"></i>
                 </div>
             </div>
-        </div>
+        </div> -->
         <p>Thanh Toán</p>
         <div class="diachi_nhanhang_">
             <p class="title_dc_nhanhang">1-Địa chỉ nhận hàng:</p>
@@ -186,6 +187,7 @@
             <table class="title_item" >
                 <thead>
                     <tr><th>STT</th>
+                        <th></th>
                         <th style="text-align: left;">Sản phẩm</th>
                         <th>Đơn giá</th>
                         <th>Số lượng</th>
@@ -195,6 +197,7 @@
                 <tbody>
                     <tr class="item_book_in-cart">
                         <td>1</td>
+                        <td id="img" ><img src="https://book365.vn/upload/resize_cache/iblock/3c4/570_490_1/3c4bcadf08b7779ce399cfc77ad194a5.jpeg" alt="">                        </td>
                         <td class="item_book_cart_specifically">
                             <div class="cart_book_title">
                                 <p class="title_book">
@@ -207,12 +210,10 @@
                                     NXB: Quân đội Nhân dân
                                 </p>
                             </div>
-                            <img src="https://book365.vn/upload/resize_cache/iblock/3c4/570_490_1/3c4bcadf08b7779ce399cfc77ad194a5.jpeg" alt="">
                         </td>
                         <td class="price_in_cart" >
                             <p class="price_item_cart">131.250 đ</p>
                             <p class="sale_price_item_cart"> <del> 175.000 đ </del>| - 25%</p>
-                            <p class="giamgiachung">Giảm giá chung: 25%. Tương đương 43.750 đ</p>
                         </td>
                         <td style="text-align: center;">
                             <p class="soluong_item">1</p>
@@ -331,6 +332,7 @@
             <table class="title_item" >
                 <thead>
                     <tr><th>STT</th>
+                        <th></th>
                         <th style="text-align: left;">Sản phẩm</th>
                         <th>Đơn giá</th>
                         <th>Số lượng</th>
@@ -340,6 +342,7 @@
                 <tbody>
                     <tr class="item_book_in-cart">
                         <td>1</td>
+                        <td><img src="https://book365.vn/upload/resize_cache/iblock/3c4/570_490_1/3c4bcadf08b7779ce399cfc77ad194a5.jpeg" alt=""></td>
                         <td class="item_book_cart_specifically">
                             <div class="cart_book_title">
                                 <p class="title_book">
@@ -353,7 +356,6 @@
                                 </p>
                                
                             </div>
-                            <img src="https://book365.vn/upload/resize_cache/iblock/3c4/570_490_1/3c4bcadf08b7779ce399cfc77ad194a5.jpeg" alt="">
                         </td>
                         <td class="price_in_cart" >
                             <p class="price_item_cart">131.250 đ</p>
