Complete Cart Count

--- a/frontdend/index.html
+++ b/frontdend/index.html
@@ -486,6 +486,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button class="add-to-cart">Thêm vào giỏ hàng</button></div>
                                     </div>
                                 </div>
                                 <div class="item-child">
@@ -504,6 +505,7 @@
                                                 <span>88.000đ</span>
                                             </div>
                                         </div>
+                                        <div class="item-button"><button class="add-to-cart">Thêm vào giỏ hàng</button></div>
                                     </div>
                                 </div>
                             </div>
