--- a/fondend/cart/trangthaidonhang.html
+++ b/fondend/cart/trangthaidonhang.html
@@ -10,6 +10,7 @@
     <style>
         .donhang_dadat th, td {
     border-bottom: 1px solid #ddd;
+    text-align: center;
 }
 .item_trangthai3 .trangthai{
     background-color: #02bbff;
@@ -23,28 +24,6 @@
 </head>
 <body>
     <div class="cart" style="position: relative;">
-        
-        <!-- <div class="cart_top">
-            <progress max="100" value="100"></progress>
-            <div class="item_trangthai">
-                <p class="text_trangthai">Giỏ hàng</p>
-                <div class="trangthai">
-                    <i class="fa-solid fa-cart-plus"></i>
-                </div>
-            </div>
-            <div class="item_trangthai2">
-                <p class="text_trangthai">Thanh toán</p>
-                <div class="trangthai">
-                    <i class="fa-regular fa-credit-card"></i>
-                </div>
-            </div>
-            <div class="item_trangthai3">
-                <p class="text_trangthai">Giao hàng</p>
-                <div class="trangthai">
-                    <i class="fa-solid fa-truck"></i>
-                </div>
-            </div>
-        </div> -->
         <p id="font600" >Đơn hàng đã đặt</p>
         <table class="donhang_dadat">
             <thead>
@@ -87,19 +66,21 @@
             <p>Địa chỉ nhận hàng: <span id="font_size18">180 Tây Mỗ,Nam Từ Liêm,Hà Nội,Việt Nam</span></p>
             <table class="title_item" >
                 <thead>
-                    <tr><th>STT</th>
+                    <tr><th width="2%">STT</th>
                         <th></th>
-                        <th style="text-align: left;">Sản phẩm</th>
-                        <th>Đơn giá</th>
-                        <th>Số lượng</th>
-                        <th>Thành tiền</th>
+                        <th width="28%" >Sản phẩm</th>
+                        <th width="10%"  >Đơn giá</th>
+                        <th width="15%"  >Khuyến mãi</th>
+                        <th width="14%"  >Số lượng</th>
+                        <th width="10%"  >Thành tiền</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="item_book_in-cart">
                         <td>1</td>
-                        <td><img src="https://book365.vn/upload/resize_cache/iblock/3c4/570_490_1/3c4bcadf08b7779ce399cfc77ad194a5.jpeg" alt=""></td>
-                        <td class="item_book_cart_specifically">
+                        <td><img id="img" src="https://book365.vn/upload/resize_cache/iblock/3c4/570_490_1/3c4bcadf08b7779ce399cfc77ad194a5.jpeg" alt=""></td>
+                        <td style="text-align: left;" class="item_book_cart_specifically">
                             <div class="cart_book_title">
                                 <p class="title_book">
                                     Quân Đội Nga - Những Bí Mật Bạn Chưa Biết
@@ -115,8 +96,8 @@
                         </td>
                         <td class="price_in_cart" >
                             <p class="price_item_cart">131.250 đ</p>
-                            <p class="sale_price_item_cart"> <del> 175.000 đ </del>| - 25%</p>
                         </td>
+                        <td><p class="sale_price_item_cart">  25%</p></td>
                         <td style="text-align: center;">
                             <p class="soluong_item">1</p>
                         </td>
